Bugfix: always ensure the invisible/hidden elements are invisible
This provides additional checks to further ensure that invisible/hidden elements are actually hidden.

--- a/sites/all/themes/genesis_mcneese/css/standard.css
+++ b/sites/all/themes/genesis_mcneese/css/standard.css
@@ -39,6 +39,7 @@ div#columns {
 
 .element-invisible {
   display: block;
+  position: absolute !important;
 
   font-size: 0;
 
@@ -47,6 +48,8 @@ div#columns {
   height: 0;
   max-height: 0;
   overflow: hidden;
+
+  clip: rect(1px, 1px, 1px, 1px);
 }
 
 input.form-submit, a.button {
